Added ability to change Profile picture

--- a/helpr/Podfile
+++ b/helpr/Podfile
@@ -4,7 +4,7 @@ pod 'Firebase/Core'
 pod 'Firebase/Auth'
 pod 'Firebase/Database'
 pod 'CodableFirebase'
-
+pod 'Firebase/Storage'
 target 'helpr' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
