--- a/helpr/helpr/Info.plist
+++ b/helpr/helpr/Info.plist
@@ -55,6 +55,10 @@
 			<false/>
 		</dict>
 	</dict>
+	<key>UIFileSharingEnabled</key>
+	<true/>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
+	<true/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
